# ge02

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: unittest.yml
cmake/: compile_warnings.cmake  libs.cmake  settings.cmake  sources.cmake
conan/: linux_clang-13_Debug  linux_clang-13_Release  linux_clang_13_Debug  linux_clang_debug
examples/: CMakeLists.txt
examples/src/: 001.cpp
include/ge/: a.hpp
include/ge/containers/: array.hpp
src/ge/: a.cpp
src/ge/containers/: array.cpp
tests/: CMakeLists.txt
tests/include/ge_test/: structs.hpp
tests/src/ge/: test_a.cpp
tests/src/ge/containers/: test_array.cpp
